# hpc-lab

./: .gitignore
lab-1/: CMakeLists.txt  output.md
lab-1/include/: sort.hpp  timeit.hpp
lab-1/src/: bogosort.cpp  main.cpp  sleep_sort.cpp  stalin_sort.cpp  timeit.cpp
lab-2/: .gitignore  CMakeLists.txt  perf.sh  run_perf.py
lab-2/include/: matrix_mult.hpp
lab-2/src/: main.cpp  matrix_mult.cpp
lab-3/: .gitignore  CMakeLists.txt
lab-3/src/: bench_access_time.cpp  main.cpp
